# adjusting_clock

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
examples/: adjusting.rs  stopwatch.rs
src/: adjustment.rs  clock.rs  lib.rs  simple.rs  test.rs
